themed page of all new sites

--- a/sites/all/themes/scholar_project/scholar-project.css
+++ b/sites/all/themes/scholar_project/scholar-project.css
@@ -192,7 +192,7 @@ li#get-form a {
   }
 
 
-#content-row-3, #block-views-iqss_project_sites-block_1, #footer {
+#block-views-iqss_project_sites-block_1, #footer {
   background: url(images/front-row3-bg.png) repeat-x #fefefe;
   min-height: 603px;
   position:relative;
@@ -202,12 +202,8 @@ li#get-form a {
   line-height: 110%;
   }
 
-#footer {
-  background: #fefefe;
-  min-height: 0;
-  }
 
-#content-row-3 h3 , #block-views-iqss_project_sites-block_1 h3 {
+#block-views-iqss_project_sites-block_1 h3 {
   background: url(images/triangle-new-left.png) no-repeat transparent;
   width: 51px;
   height: 46px;
@@ -216,7 +212,7 @@ li#get-form a {
   margin: 0 0 0 -1px;
   }
 
-#search-person, #block-views-iqss_project_sites-block_1 .views-exposed-form {
+#block-views-iqss_project_sites-block_1 .views-exposed-form {
   width: 340px;
   height: 40px;
   background: url(images/search-person.png) no-repeat transparent;
@@ -252,30 +248,30 @@ li#get-form a {
   display:none;
   }
 
-#new-sites, #block-views-iqss_project_sites-block_1 {
+#block-views-iqss_project_sites-block_1 {
   clear: both;
 
   }
 
-.new-site-block, #block-views-iqss_project_sites-block_1 .views-row {
+#block-views-iqss_project_sites-block_1 .views-row {
   float: left;
   width: 134px;
   margin-left: 24px;
   }
 
-.new-site-block img, #block-views-iqss_project_sites-block_1 img {
+#block-views-iqss_project_sites-block_1 img, .view-iqss-project-sites img {
   border: 1px solid #535252;
   width: 100px;
   height: 100px;
   }
 
-.new-site-block h5, #block-views-iqss_project_sites-block_1 .views-field-description p{
+.views-field-description p {
   font-weight: normal;
   line-height: 1.3em;
   margin-bottom: 0;
   }
 
-#block-views-iqss_project_sites-block_1 .views-field-title a {
+.views-field-title a {
   color: #313030;
   font-weight: bold;
   }
@@ -303,6 +299,12 @@ li#get-form a {
   width: 67px;
   height: 32px;
   background: url(images/more.png) no-repeat transparent;
+  }
+
+
+#footer {
+  background: #fefefe;
+  min-height: 0;
   }
 
 
@@ -334,4 +336,10 @@ td, td.description {
   padding: 5px;
   color: #222;
   font-size: .9em;
+  }
+
+.view-iqss-project-sites td {
+  width: 20%;
+  padding: 17px;
+  font-size: 1.1em;
   }
