--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -179,3 +179,45 @@ div.ctools-modal-content #ucreate-user-form .form-item label {
    text-align:right;
    }
 
+/* CONTENT PAGES FILTERING AND UPDATING OPTIONS */
+
+fieldset.vsite_content_filter_box, #views-bulk-operations-select {
+  float: left;
+  }
+
+#views-bulk-operations-form--1 .views-node-selector {
+  clear: both;
+  }
+
+.vsite_content_bulk_update {
+  margin: 0;
+  }
+
+.vsite_content_filter_box .fieldset-wrapper, #views-bulk-operations-select .fieldset-wrapper {
+  left: 0;
+  top: -6px;
+  margin: 0;
+  font-size:0.8em;
+  padding:20px 20px 10px;
+  background: #EAEBE9;
+  position: absolute;
+  -moz-border-radius-bottomleft: 8px;
+  -moz-border-radius-bottomright: 8px;
+  -moz-border-radius-topright: 8px;
+  -webkit-border-radius-bottom-left-radius: 8px;
+  -webkit-border-radius-bottom-right-radius: 8px;
+  -webkit-border-radius-top-right-radius: 8px;
+  }
+
+.view-vsite-content .vsite_content_filter_box legend, #views-bulk-operations-select legend {
+  padding-top: 4px;
+  }
+
+.view-vsite-content .vsite_content_filter_box legend.collapse-processed, #views-bulk-operations-select legend.collapse-processed {
+  background: #EAEBE9;
+  padding-right:5px;
+  }
+
+.view-vsite-content fieldset.collapsed legend.collapse-processed, #views-bulk-operations-select fieldset.collapsed legend.collapse-processed {
+  background: transparent;
+  }
