themed filter and update options

--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -211,6 +211,7 @@ fieldset.vsite_content_filter_box, #views-bulk-operations-select {
 
 .view-vsite-content .vsite_content_filter_box legend, #views-bulk-operations-select legend {
   padding-top: 4px;
+  font-size: 1em;
   }
 
 .view-vsite-content .vsite_content_filter_box legend.collapse-processed, #views-bulk-operations-select legend.collapse-processed {
