changed widget buttons

--- a/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
+++ b/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
@@ -54,7 +54,7 @@
 
 
 #scholarlayout-top-widgets {
-  height:130px;
+  height:114px;
   background:#eaebe9;
   width: 100%;
   }
@@ -77,14 +77,15 @@ li.scholarlayout-item {
   }
 
 #scholarlayout-container li.scholarlayout-item {
-  margin: 3px;
-  padding: 4px 4px 4px 14px;
+  margin: 0;
+  padding: 4px 4px 4px 31px;
   border: 1px solid #8a8888;
-  background: url(images/scholarlayout-item-placed.png) repeat-x 0 0 #fff;
+  background: url(images/widget-placed-bg.png) no-repeat 3px 2px #eaebe9;
+  min-height: 21px;
   }
 
 #scholarlayout-container li.scholarlayout-item:hover {
-  background: #d1ea02;
+  background-color: #d1ea02;
   }
 
 .scholarlayout-item-settings {
