button style -fixed broken button in exposed forms in views

--- a/sites/all/themes/scholar_base/button_style.css
+++ b/sites/all/themes/scholar_base/button_style.css
@@ -30,9 +30,9 @@ table .form-actions {
   text-decoration: none;
   text-shadow:0 1px 0 rgba(206, 214, 221, 0.75);
   font-weight: normal;
-  font-size: 13px;
+  font-size: 12px;
   height: 26px;
-  line-height: 25px;
+  line-height: 24px;
   padding: 0 5px 2px 16px;
   /* Static */
   overflow: visible;
@@ -66,3 +66,6 @@ li.button a:hover, a.button:hover {
  */
 .fivestar-widget .form-button-wrapper { margin: 0; padding: 0; background: transparent none; }
 
+.views-exposed-form .views-exposed-widget .form-submit {
+  margin-top: 0;
+  }
