fixed input theming which button style module broke

--- a/sites/all/themes/scholar_project/scholar-project.css
+++ b/sites/all/themes/scholar_project/scholar-project.css
@@ -242,6 +242,19 @@ li#get-form a {
   margin-top: 5px;
   height: 30px;
   text-indent: -9999em;
+  line-height: 110%;
+  }
+
+#views-exposed-form-iqss-project-sites-block-1 .form-actions {
+  margin: 0;
+  }
+
+#views-exposed-form-iqss-project-sites-block-1 span.form-button-wrapper {
+  background: transparent;
+  position: static;
+  display: inline;
+  padding: 0;
+  margin: 0;
   }
 
 #search-person, #block-views-iqss_project_sites-block_1 .views-exposed-form label {
