fixed registration button which broke with button style module

--- a/sites/all/modules/scholar/modules/scholarregister/theme/scholarregister.css
+++ b/sites/all/modules/scholar/modules/scholarregister/theme/scholarregister.css
@@ -71,6 +71,7 @@ body.page-site-register h2.title {
 body.page-site-register #user_register, body.page-site-register #domain-field {
   clear:both;
   padding-top: 50px;
+  padding-bottom: 1px;
   }
 
 #scholarregister-signup-form #name-field, #scholarregister-signup-form #mail-field {
@@ -92,7 +93,6 @@ body.page-site-register #user_register, body.page-site-register #domain-field {
 
 body.page-site-register #edit-submit, body.page-site-register a.submit-link {
   float: right;
-  margin-top: 30px;
   }
 
 body.page-site-register .status {
