fixed buttons broken by button style module

--- a/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
+++ b/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
@@ -171,14 +171,11 @@ li.scholarlayout-item {
   margin-top: 10px;
   }
 
-#cp-settings-form .submit-link {
+#cp-settings-form .form-actions {
   position:absolute;
   top: 870px;
+  left: 459px;
   z-index: 10;
-  }
-
- #cp-settings-form .edit-reset {
-  left: 150px;
   }
 
 .ahah-progress-throbber {
