buttons renamed context-buttons

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -315,14 +315,14 @@ a.delete {
   text-indent: -999em;
   }
 
-a.button {
+a.context-button {
   float:right;
   color: #FF003A !important;
   font-style: normal !important;
   font-size: 12px !important;
   }
 
-span.buttons a.button {
+span.buttons a.context-button {
   float: none;
   margin-left: 6px;
   }
