rethemed context-buttons since now a list

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -315,6 +315,15 @@ a.delete {
   text-indent: -999em;
   }
 
+.item-list ul.context-links {
+  margin: 0;
+  }
+
+.item-list ul.context-links li {
+  list-style: none;
+  margin:0;
+  }
+
 a.context-button {
   float:right;
   color: #FF003A !important;
