rethemed context-buttons since now a list

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -321,7 +321,7 @@ a.delete {
 
 .item-list ul.context-links li {
   list-style: none;
-  margin:0;
+  margin:0 0 0 6px;
   }
 
 a.context-button {
@@ -333,7 +333,6 @@ a.context-button {
 
 span.buttons a.context-button {
   float: none;
-  margin-left: 6px;
   }
 
 .show-content-type {
