--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -321,19 +321,16 @@ a.delete {
 
 .item-list ul.context-links li {
   list-style: none;
-  margin:0 0 0 6px;
+  margin:0 0 0 .7em;
+  float:right;
   }
 
 a.context-button {
-  float:right;
   color: #FF003A !important;
   font-style: normal !important;
   font-size: 12px !important;
   }
 
-span.buttons a.context-button {
-  float: none;
-  }
 
 .show-content-type {
   text-transform: lowercase;
