some forms now have finite width

--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -107,6 +107,17 @@ body.no-sidebars #cp-content, body.sidebar-right #cp-content {
   margin: 30px;
   }
 
+.page-cp-settings #cp-content .innerframe form,
+.page-cp-settings-menus #cp-content .innerframe form,
+.page-cp-settings-logo #cp-content .innerframe form,
+.page-cp-settings-front #cp-content .innerframe form {
+  width: 721px;
+  }
+
+.page-cp-settings #cp-content .innerframe form .resizable-textarea  {
+  width: 99%;
+  }
+
 .help {
   margin-left: 5px;
   }
@@ -247,7 +258,7 @@ p {
 .view-vsite-activity .views-field-message span:after {
   content: ':';
   }
-  
+
 /* Content Area */
 #cp-content .innerframe form#views-bulk-operations-form--1 {
   margin: 0px;
