changed to buttons

--- a/sites/all/modules/scholar/modules/scholarregister/theme/scholarregister.css
+++ b/sites/all/modules/scholar/modules/scholarregister/theme/scholarregister.css
@@ -91,8 +91,8 @@ body.page-site-register #user_register, body.page-site-register #domain-field {
   right: 0;
   }
 
-body.page-site-register #edit-submit, body.page-site-register a.submit-link {
-  float: right;
+.form-actions {
+  text-align: right;
   }
 
 body.page-site-register .status {
