--- a/sites/all/themes/scholar_base/button_style.css
+++ b/sites/all/themes/scholar_base/button_style.css
@@ -5,11 +5,13 @@
  */
 .form-actions {
   margin: 1em 0;
+  text-align:right;
   zoom: 1;
-}
+	}
+
 table .form-actions {
   margin: 0;
-}
+	}
 .form-button-wrapper, li.button a, a.button {
   /* Customizable */
   background: transparent url(images/buttons-sprite.png) no-repeat right top;
@@ -22,7 +24,7 @@ table .form-actions {
   line-height: 0;
   cursor: pointer;
   cursor: hand;
-}
+	}
 .form-button-wrapper input, li.button a span, a.button span {
   /* Customizable */
   background: transparent url(images/buttons-sprite.png) no-repeat left top;
@@ -43,29 +45,29 @@ table .form-actions {
   border: 0;
   cursor: pointer;
   cursor: hand;
-}
+	}
 .form-button-wrapper:active, li.button a:active, a.button:active {
   background-position: right -24px;
-}
+	}
 .form-button-wrapper input:active, li.button a span:active, a.button span:active {
   background-position: left -24px;
-}
+	}
 
 /**
  * Button link overrides.
  */
 li.button a span, a.button span {
   padding-bottom: 0;
-}
+	}
 li.button a:hover, a.button:hover {
   color: #fff;
-}
+	}
 
 /**
  * Third-party module support styles.
  */
-.fivestar-widget .form-button-wrapper { margin: 0; padding: 0; background: transparent none; }
+.fivestar-widget .form-button-wrapper { margin: 0; padding: 0; background: transparent none; 	}
 
 .views-exposed-form .views-exposed-widget .form-submit {
   margin-top: 0;
-  }
+  	}
