--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -92,7 +92,7 @@ h3#modal-title {
 
 .section-cp fieldset {
   border: none;
-  border-bottom: 1px solid #ccc;
+  /*border-bottom: 1px solid #ccc;*/
   }
 
 .section-cp fieldset fieldset, #views-bulk-operations-select fieldset {
@@ -178,6 +178,10 @@ div.ctools-modal-content #ucreate-user-form .form-item label {
    padding: 30px 0;
    text-align:right;
    }
+
+form div.buttons {
+  text-align: right;
+  }
 
 /* CONTENT PAGES FILTERING AND UPDATING OPTIONS */
 
