empty content context button

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -331,6 +331,9 @@ a.context-button {
   font-size: 12px !important;
   }
 
+.empty-content p, .empty-content .item-list ul.context-links li {
+  float: left;
+  }
 
 .show-content-type {
   text-transform: lowercase;
