darkened admin link bckground

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -144,7 +144,7 @@ ul.links li a, ul.links li a:visited {
 
 ul.links li a:hover {
   color: #FFF;
-  background: #bbb;
+  background: #999;
   }
 
 div.terms {
