made sure all themes have .active

--- a/sites/all/themes/scholar_theme_01/scholar-theme-01.css
+++ b/sites/all/themes/scholar_theme_01/scholar-theme-01.css
@@ -143,7 +143,7 @@ body.navbar #header p {
   }
 
 
-#navbar a:hover, #sidebar-left a:hover {
+#navbar a:hover, #sidebar-left a:hover, #navbar a.active, #sidebar-left a.active {
   background:#F9FAFA;
   }
 
