--- a/sites/all/themes/scholar_theme_02/scholar-theme-02.css
+++ b/sites/all/themes/scholar_theme_02/scholar-theme-02.css
@@ -131,7 +131,7 @@ body.sidebar-left #content-wrapper, body.header-left-main #header-wrapper {
   color: #fff;
   }
 
-#header a:hover {
+#header a:hover, #header a.active {
     color:#F9E433;
     }
 
