--- a/sites/all/themes/scholar_theme_03/scholar-theme-03.css
+++ b/sites/all/themes/scholar_theme_03/scholar-theme-03.css
@@ -159,7 +159,7 @@ body.navbar-off #header {
     color: #fff;
     }
 
-#navbar li a:hover {
+#navbar li a:hover, #navbar li a.active {
     color: #F9E433;
     }
 
