--- a/sites/all/themes/scholar_theme_05/scholar-theme-05.css
+++ b/sites/all/themes/scholar_theme_05/scholar-theme-05.css
@@ -43,7 +43,7 @@ a, a:visited {
   font-size: 1.2em;
   }
 
-a:hover {
+a:hover, a.active {
   color:#000;
   }
 
@@ -199,6 +199,10 @@ body.header-main-right #header-wrapper, body.header-main #header-wrapper {
   margin-right: 15px;
   font-style: italic;
   font-family: georgia, serif;
+  }
+
+#navbar a:hover, #navbar a.active {
+  color: #993300;
   }
 
 body.sidebar-right #navbar {
