--- a/sites/all/themes/scholar_theme_06/scholar-theme-06.css
+++ b/sites/all/themes/scholar_theme_06/scholar-theme-06.css
@@ -133,6 +133,8 @@ body.no-sidebars #content-wrapper {
     color:#F9E433;
     }
 
+
+
 #logo img {
   width: 160px;
   }
@@ -147,11 +149,11 @@ body.no-sidebars #content-wrapper {
     font-size: 1.1em;
     }
 
-#navbar li a, #navbar li a:visited {
+#navbar a, #navbar a:visited {
     color:#D4D5D3;
     }
 
-#navbar li:hover {
+#navbar a:hover, #navbar a.active {
     color: #F8EE7C;
     text-decoration: none;
     }
