--- a/sites/all/themes/scholar_theme_07/scholar-theme-07.css
+++ b/sites/all/themes/scholar_theme_07/scholar-theme-07.css
@@ -37,6 +37,8 @@ a:hover {
     }
 
 
+
+
 h1, h2, h3, #sidebar-right a, #navbar, #header {
     font-weight: normal;
     }
@@ -133,7 +135,7 @@ h2.title {
     border-bottom: 1px solid #c16e04;
     }
 
-#header h1 a, #header h1 a:visited {
+#header h1 a, #header h1 a:visited, #header #logo a, #header #logo a:visited {
     text-decoration: none;
     border: none;
     }
@@ -171,7 +173,7 @@ h2.title {
     font-weight: bold;
     }
 
-#navbar li a:hover {
+#navbar li a:hover, #navbar li a.active {
     color:#fff;
     background: #b8690c;
     }
