--- a/sites/all/themes/scholar_theme_04/scholar-theme-04.css
+++ b/sites/all/themes/scholar_theme_04/scholar-theme-04.css
@@ -15,10 +15,14 @@ a, a:visited {
     padding: 2px;
     }
 
-a:hover {
+a:hover, a.active {
     color:#fff;
     background:#adad84;
     }
+
+#logo a:hover {
+  background: transparent;
+  }
 
 
 h1, h2, h3, #sidebar-right a, #navbar, #header {
@@ -128,6 +132,9 @@ body.sidebar-left #content-wrapper, body.header-left-main #header-wrapper {
     color: #F9E433;
     }
 
+#navbar li a.active:hover {
+  color: #fff;
+  }
 
 
 /* MAIN CONTENT AREA */
