content-empty div needs clear: both

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -315,6 +315,10 @@ a.delete {
   text-indent: -999em;
   }
 
+.empty-content {
+  clear: both;
+  }
+
 .item-list ul.context-links {
   margin: 0;
   }
