another views css breaking buttons

--- a/sites/all/themes/scholar_base/button_style.css
+++ b/sites/all/themes/scholar_base/button_style.css
@@ -3,11 +3,16 @@
 /**
  * Form actions.
  */
+
 .form-actions {
   margin: 1em 0;
   text-align:right;
   zoom: 1;
 	}
+
+#edit-views-apply, #edit-views-reset {
+  margin-top:0 !important;
+  }
 
 table .form-actions {
   margin: 0;
