some theming of add image button

--- a/sites/all/modules/features/scholar_image_gallery/scholar_image_gallery.css
+++ b/sites/all/modules/features/scholar_image_gallery/scholar_image_gallery.css
@@ -35,10 +35,17 @@ div.view-display-id-node_content_2 div.view-empty {
 
 ul.links li.image_field_gallery  {
   float: right;
-  padding: 5px 10px;
-  border: 1px solid #ddd;
+  }
+
+ul.links li.image_field_gallery a {
+  padding-left: 28px;
   font-weight: bold;
-}
+  background: url(images/camera.png) no-repeat 2px 50% transparent;
+  }
+
+ul.links li.image_field_gallery a:hover {
+  background: url(images/camera.png) no-repeat 2px 50% #999;
+  }
 
 // Force the table grid to equal column
 // widths no matter what is in them.
