--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -94,39 +94,11 @@ li.leaf, li.collapsed {
   list-style: none;
   }
 
-.views-admin-links {
-  float: right;
-  }
-
 .views-admin-links li, .views-admin-links li a {
   color: #27749F;
   font-style: normal;
   font-size:.8em;
-  float:left;
   }
-
-.views-admin-links li a {
-  display:block;
-  float: none;
-  background: #fff;
-  border: 1px solid #e0e0e0;
-  border-right: none;
-  }
-
-.views-admin-links li.first a {
- -moz-border-radius-bottomleft: 5px;
- -moz-border-radius-topleft: 5px;
- -webkit-border-radius-bottom-left-radius: 5px;
- -webkit-border-radius-top-left-radius: 5px;
- }
-
-.views-admin-links li.last a {
- border-right: 1px solid #e0e0e0;
- -moz-border-radius-bottomright: 5px;
- -moz-border-radius-topright: 5px;
- -webkit-border-radius-bottom-right-radius: 5px;
- -webkit-border-radius-top-right-radius: 5px;
- }
 
 .links li {
   font-size: .9em;
@@ -143,8 +115,7 @@ ul.links li a, ul.links li a:visited {
   }
 
 ul.links li a:hover {
-  color: #FFF;
-  background: #999;
+  color: #000;
   }
 
 div.terms {
