--- a/sites/all/modules/features/scholar_image_gallery/scholar_image_gallery.css
+++ b/sites/all/modules/features/scholar_image_gallery/scholar_image_gallery.css
@@ -1,21 +1,24 @@
 /* $Id: views_gallery.css,v 1.5 2009/08/18 14:45:17 karens Exp $ */
 
-div.view-gallery div.views-field-title {
-  font-size: 1.2em;
+div.view-scholar-image-gallery {
+  line-height: 100%;
+  }
+
+div.view-scholar-image-gallery div.views-field-title {
+  font-size: .9em;
   font-weight: bold;
 }
 
-div.view-gallery div.views-field-field-gallery-image-fid img {
-  border: 1px solid #666;
+div.views-field-field-gallery-image-fid img {
+  border: 1px solid #ccc;
   padding: 2px;
-}
+  }
 
-div.view-gallery div.views-field-field-gallery-image-fid img:hover {
-  border: 3px solid #666;
-  padding: 0px;
-}
+div.views-field-field-gallery-image-fid img:hover {
+  border-color: #444;
+  }
 
-div.view-gallery div.views-field-created {
+div.view-scholar-image-gallery div.views-field-created {
   font-size: .8em;
   font-style: italic;
 }
@@ -37,14 +40,10 @@ ul.links li.image_field_gallery  {
   float: right;
   }
 
-ul.links li.image_field_gallery a {
-  padding-left: 28px;
+ul.links li.image_field_gallery a, ul.links li.image_field_gallery a:visited {
+  padding: 2px 5px 2px 28px;
   font-weight: bold;
   background: url(images/camera.png) no-repeat 2px 50% transparent;
-  }
-
-ul.links li.image_field_gallery a:hover {
-  background: url(images/camera.png) no-repeat 2px 50% #999;
   }
 
 // Force the table grid to equal column
