theming image gallery

--- a/sites/all/modules/features/scholar_image_gallery/scholar_image_gallery.css
+++ b/sites/all/modules/features/scholar_image_gallery/scholar_image_gallery.css
@@ -12,10 +12,11 @@ div.view-scholar-image-gallery div.views-field-title {
 div.views-field-field-gallery-image-fid img {
   border: 1px solid #ccc;
   padding: 2px;
+  background: #fff;
   }
 
 div.views-field-field-gallery-image-fid img:hover {
-  border-color: #444;
+ background: #ffff66;
   }
 
 div.view-scholar-image-gallery div.views-field-created {
