buttons now to the left

--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -107,12 +107,16 @@ body.no-sidebars #cp-content, body.sidebar-right #cp-content {
   margin: 30px;
   }
 
+/*
+
 .page-cp-settings #cp-content .innerframe form,
 .page-cp-settings-menus #cp-content .innerframe form,
 .page-cp-settings-logo #cp-content .innerframe form,
 .page-cp-settings-front #cp-content .innerframe form {
   width: 721px;
   }
+
+*/
 
 .page-cp-settings #cp-content .innerframe form .resizable-textarea  {
   width: 99%;
