buttons now to the left

--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -180,7 +180,7 @@ div.ctools-modal-content #ucreate-user-form .form-item label {
    }
 
 form div.buttons {
-  text-align: right;
+  text-align: left;
   }
 
 /* CONTENT PAGES FILTERING AND UPDATING OPTIONS */
