context-links in cp should not be floated

--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -130,6 +130,15 @@ body.no-sidebars #cp-content, body.sidebar-right #cp-content {
   float: right;
   }
 
+
+.item-list ul.context-links {
+  padding: 30px 0 0 30px
+  }
+
+.item-list ul.context-links li {
+  float: none;
+  }
+
 /* For use with admin_menu module only */
 
 body.admin-menu #top {
