removed theming for button style module; added simple theming for firefox and safari only

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -321,8 +321,21 @@ a.context-button {
   }
 
 
+/* OTHER BUTTONS */
 
-
+#edit-submit {
+  background: #b4c6ce;
+  color: #000;
+  border: 1px solid #a1aaae;
+  text-shadow:0 1px 0 rgba(206, 214, 221, 0.75);
+  padding: 2px 10px;
+  -moz-border-radius:20px;
+  -webkit-border-radius:20px;
+  margin-bottom: 5px;
+  cursor: pointer;
+  text-align: center;
+  white-space: nowrap;
+  }
 
 
 
