--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -252,7 +252,11 @@ body.header-left-right #header-right {
 
 
 
+/* Views */
 
+.views-row {
+  margin-bottom: 1em;
+  }
 
 
 /* DELETE, EDIT BUTTONS */
