buttons theming, plus activity area

--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -192,9 +192,6 @@ body.admin-menu #main-content {
   font-size: .8em;
   }
 
-.view-display-id-default {
-  padding: 30px;
-  }
 
 
 /* FOOTER Get rid of all this once the footer content is in a module */
@@ -255,6 +252,11 @@ p {
 /* SPECIFIC PAGE VIEWS */
 
 /* Activity Area */
+
+
+.view-vsite-activity {
+  margin: 30px 0 0 30px;
+  }
 
 .view-vsite-activity .views-field-message, .view-vsite-activity .views-field-title {
   font-weight: bold;
