--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -327,7 +327,7 @@ a.context-button {
 
 /* OTHER BUTTONS */
 
-#edit-submit {
+input.form-submit {
   background: #b4c6ce;
   color: #000;
   border: 1px solid #a1aaae;
