--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -170,10 +170,12 @@ body.admin-menu #main-content {
 
 #cp-sidemenu li.active a,
 #cp-sidemenu li.active-trail a {
-  background: url(images/cp-sidemenu-active.png) 0 100% repeat-x #b8c0c0;
+  /*background: url(images/cp-sidemenu-active.png) 0 100% repeat-x #b8c0c0;*/
+  background: #b8c0c0;
   color: #000;
   text-decoration: none;
   text-shadow:0 1px 0 rgba(206, 214, 221, 0.75);
+  border: none;
   }
 
 
