--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -155,7 +155,7 @@ div.terms {
 	}
 
 body.no-sidebars #content-main, body.header-main #header-main {
-  width: auto;
+  padding: 0;
   }
 
 #header-wrapper, #navbar, #content-wrapper, #footer {
@@ -332,7 +332,7 @@ input.form-submit {
   color: #000;
   border: 1px solid #a1aaae;
   text-shadow:0 1px 0 rgba(206, 214, 221, 0.75);
-  padding: 2px 10px;
+  padding: 2px 10px !important;
   -moz-border-radius:20px;
   -webkit-border-radius:20px;
   margin-bottom: 5px;
@@ -393,4 +393,14 @@ div.status {
 .flag-waiting .flag-throbber {
   float:none;
   padding-right: 21px;
+  }
+
+.form-button-wrapper div.ahah-progress, .form-button-wrapper div.throbber {
+  display:block;
+  position:absolute;
+  right: -22px;
+  top: 5px;
+  height:5px;
+  width:21px;
+  float: none;
   }
