fixed a navbar bug

--- a/sites/all/themes/scholar_theme_01/scholar-theme-01.css
+++ b/sites/all/themes/scholar_theme_01/scholar-theme-01.css
@@ -129,6 +129,7 @@ body.navbar #header p {
 
 #header-wrapper {
   padding-right: 130px;
+  height: 161px;
   }
 
 
@@ -150,10 +151,6 @@ body.navbar #header p {
 
 /*Navbar Specific */
 
-#navbar {
-  padding-top: 14px;
-  }
-
 #navbar li {
   font-size: 1em;
   line-height: 34px;
@@ -169,19 +166,6 @@ body.navbar #header p {
 #navbar a, #navbar a:visited {
   padding: 0 9px;
   height: 34px;
-  }
-
-body.sidebar-left #navbar, body.two-sidebars #navbar {
-  float: right;
-  width: 711px;
-  clear: none;
-  border-bottom: 1px solid #D8D6D6;
-  padding-top: 0;
-  }
-
-body.sidebar-left #navbar li, body.two-sidebars #navbar li {
-  border:none;
-  line-height: normal;
   }
 
 body.sidebar-left #content-wrapper, body.two-sidebars #content-wrapper {
