--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -275,7 +275,7 @@ ul.admin li {
   }
 
 ul.admin li a, ul.admin li a:visited {
-  color:#ff0000 !important;
+  color:#cc0000 !important;
   text-decoration: underline;
   padding: 2px !important;
   }
@@ -310,9 +310,11 @@ a.delete {
   }
 
 a.context-button {
-  color: #FF003A !important;
+  color: #cc0000 !important;
   font-style: normal !important;
   font-size: 12px !important;
+  background: url(images/plus.gif) no-repeat 0 50% transparent;
+  padding-left: 13px;
   }
 
 .empty-content p, .empty-content .item-list ul.context-links li {
