changed marker color

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -81,6 +81,10 @@ a, a:visited {
 	color: #2d63a6;
 	}
 
+.marker, .form-required, ul.admin li a, ul.admin li a:visited, a.context-button {
+  color: #cc0000 !important;
+  }
+
 .block ul {
   padding: 0;
   }
@@ -275,7 +279,6 @@ ul.admin li {
   }
 
 ul.admin li a, ul.admin li a:visited {
-  color:#cc0000 !important;
   text-decoration: underline;
   padding: 2px !important;
   }
@@ -310,7 +313,6 @@ a.delete {
   }
 
 a.context-button {
-  color: #cc0000 !important;
   font-style: normal !important;
   font-size: 12px !important;
   background: url(images/plus.gif) no-repeat 0 50% transparent;
