context-links, scholar admin links etc

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -78,8 +78,9 @@ ul, li {
 
 a, a:visited {
 	text-decoration: none;
-	color: #2d63a6;
+	color: #005C9C;
 	}
+
 
 .marker, .form-required, ul.admin li a, ul.admin li a:visited, a.context-button {
   color: #cc0000 !important;
@@ -98,11 +99,7 @@ li.leaf, li.collapsed {
   list-style: none;
   }
 
-.views-admin-links li, .views-admin-links li a {
-  color: #27749F;
-  font-style: normal;
-  font-size:.8em;
-  }
+
 
 .links li {
   font-size: .9em;
@@ -113,13 +110,21 @@ ul.links li {
   }
 
 ul.links li a, ul.links li a:visited {
-  text-decoration: none !important;
+  text-decoration: none;
+  font-style: normal;
   padding: 1px 3px;
-  color: #cd6d06;
+  font-size:12px;
+  color: #005C9C;
+  background: transparent;
   }
 
 ul.links li a:hover {
-  color: #000;
+  text-decoration: underline;
+  color: #005C9C;
+  }
+
+.views-admin-links ul.links li a {
+  font-size:10px;
   }
 
 div.terms {
