--- a/sites/all/modules/features/scholar_image_gallery/scholar_image_gallery.css
+++ b/sites/all/modules/features/scholar_image_gallery/scholar_image_gallery.css
@@ -1,41 +1,11 @@
 /* $Id: views_gallery.css,v 1.5 2009/08/18 14:45:17 karens Exp $ */
 
-div.view-scholar-image-gallery {
-  line-height: 100%;
+
+
+
+.view-scholar-image-gallery p {
+  margin-bottom: 0;
   }
-
-div.view-scholar-image-gallery div.views-field-title {
-  font-size: .9em;
-  font-weight: bold;
-}
-
-div.views-field-field-gallery-image-fid img {
-  border: 1px solid #ccc;
-  padding: 2px;
-  background: #fff;
-  }
-
-div.views-field-field-gallery-image-fid img:hover {
- background: #ffff66;
-  }
-
-div.view-scholar-image-gallery div.views-field-created {
-  font-size: .8em;
-  font-style: italic;
-}
-
-div.view-display-id-node_content_2 {
-  float: left;
-  padding-right: 10px;
-}
-
-div.view-display-id-node_content_2 div.view-empty {
-  border: 1px solid black;
-  font-size: 0.9em;
-  padding: 5px;
-  text-align: center;
-  width: 140px;
-}
 
 ul.links li.image_field_gallery  {
   float: right;
@@ -47,8 +17,24 @@ ul.links li.image_field_gallery a, ul.links li.image_field_gallery a:visited {
   background: url(images/camera.png) no-repeat 2px 50% transparent;
   }
 
+
+div.views-field-field-gallery-image-fid img {
+  border: 1px solid #ccc;
+  padding: 2px;
+  background: #fff;
+  }
+
+div.views-field-field-gallery-image-fid img:hover {
+ background: #ffff66;
+  }
+
+
 // Force the table grid to equal column
 // widths no matter what is in them.
 div.view-gallery table.views-view-grid {
   table-layout:fixed;
 }
+
+.inline-first {
+  display:inline;
+  }
