admin link theming

--- a/sites/all/modules/scholar/theme/scholar-admin-links.css
+++ b/sites/all/modules/scholar/theme/scholar-admin-links.css
@@ -1,4 +1,8 @@
-.scholar-scholar-admin-inline .panel, .scholar-scholar-admin-inline .toggle h4 {
+.scholar-admin .slider {
+  display:none;
+  }
+
+.scholar-admin .slider, .scholar-admin .toggle span {
   background:#eef3fb;
   border: 1px solid #dde2eb;
   font: 12px/120% arial, sans-serif;
@@ -6,14 +10,14 @@
   padding: 10px;
   }
 
-.scholar-scholar-admin-inline .toggle h4 {
+.scholar-admin .toggle span {
   -moz-border-radius: 15px;
   -webkit-border-radius: 15px;
   margin: 0;
   font-weight: bold;
   }
 
-.scholar-scholar-admin-inline .slider {
+.scholar-admin .slider {
   padding: 2px;
   text-align: right;
   position:relative;
@@ -21,7 +25,7 @@
   padding: 0;
   }
 
-.scholar-scholar-admin-inline .opened h4 {
+.scholar-admin .opened span {
   border-bottom: none;
   -moz-border-radius-bottom-left: 0 !important;
   -moz-border-radius-bottom-right: 0 !important;
@@ -29,17 +33,14 @@
   -webkit-border-bottom-right-radius: 0 !important;
   }
 
-.scholar-scholar-admin-inline .scholar-admin-links a, .scholar-scholar-admin-inline .scholar-admin-links a:visited {
+.scholar-admin ul.links li a, .scholar-admin .scholar-admin ul.links li a:visited {
   color: #005C9C;
   background: transparent;
   padding: 2px 4px;
   }
 
-.scholar-scholar-admin-inline .scholar-admin-links a:hover {
+.scholar-admin ul.links li a:hover {
   background: transparent;
   text-decoration: underline;
   }
 
-.panel {
-  display:none;
-  }
