--- a/sites/all/modules/scholar/theme/scholar-admin-links.css
+++ b/sites/all/modules/scholar/theme/scholar-admin-links.css
@@ -15,22 +15,11 @@
   -webkit-border-radius: 15px;
   margin: 0;
   font-weight: bold;
+  padding: 2px 6px;
   }
 
 .scholar-admin .slider {
-  padding: 2px;
-  text-align: right;
-  position:relative;
-  margin: 0;
-  padding: 0;
-  }
-
-.scholar-admin .opened span {
-  border-bottom: none;
-  -moz-border-radius-bottom-left: 0 !important;
-  -moz-border-radius-bottom-right: 0 !important;
-  -webkit-border-bottom-left-radius: 0 !important;
-  -webkit-border-bottom-right-radius: 0 !important;
+  margin-top: 20px;
   }
 
 .scholar-admin ul.links li a, .scholar-admin .scholar-admin ul.links li a:visited {
