more admin link theming

--- a/sites/all/modules/scholar/theme/scholar-admin-links.css
+++ b/sites/all/modules/scholar/theme/scholar-admin-links.css
@@ -5,21 +5,25 @@
 .scholar-admin .slider, .scholar-admin .toggle span {
   background:#eef3fb;
   border: 1px solid #dde2eb;
-  font: 12px/120% arial, sans-serif;
   color: #444;
   padding: 10px;
+  font: 12px/120% arial, sans-serif;
+  }
+
+.scholar-admin .toggle {
+  display:inline;
   }
 
 .scholar-admin .toggle span {
   -moz-border-radius: 15px;
   -webkit-border-radius: 15px;
   margin: 0;
-  font-weight: bold;
-  padding: 2px 6px;
+  padding: 1px 6px;
+  cursor: pointer;
   }
 
 .scholar-admin .slider {
-  margin-top: 20px;
+  margin-top: 6px;
   }
 
 .scholar-admin ul.links li a, .scholar-admin .scholar-admin ul.links li a:visited {
