adding important to context buttons

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -320,8 +320,12 @@ a.delete {
 a.context-button {
   font-style: normal !important;
   font-size: 12px !important;
-  background: url(images/plus.gif) no-repeat 0 50% transparent;
-  padding-left: 13px;
+  background: url(images/plus.gif) no-repeat 0 50% transparent !important;
+  padding: 0 0 0 13px !important;
+  }
+
+a.context-button:hover {
+  background-color: transparent !important;
   }
 
 .empty-content p, .empty-content .item-list ul.context-links li {
