themed cite dist

--- a/sites/all/themes/scholar_base/tables.css
+++ b/sites/all/themes/scholar_base/tables.css
@@ -15,13 +15,13 @@ th, td {
 	padding: .6em;
 	vertical-align: top;
 	color:#4a4a4a;
-	
+
 	}
-	
+
 td:first-child {
   text-align: left;
   }
-	
+
 th {
   font-weight: bold;
   font-size: 1.1em;
@@ -30,15 +30,15 @@ th {
 tbody, tbody th {
   border: none;
   }
-  
+
 th.checkbox, td.checkbox {
 	text-align: center;
 	}
-	
+
 tr.even, tr.odd {
   background-color: transparent;
   }
-  
+
 td, td a {
   color: #666;
   }
@@ -46,26 +46,28 @@ td, td a {
 th, th a {
   color: #425e69;
   }
-  
+
 td.active {
   background: #eaebe9;
   }
-  
+
 tr.selected td, tr.selected td a {
   background: #a7afaf;
   color: #fff;
   }
-  
-  
-	
+
+
+
 /* MODULES LIST */
 
 table.package .version {
 	direction: ltr;
 	}
-	
+
 table.package .description {
 	width: 100%;
 	}
-	
-	
+
+
+/* BIBLIO TABLES */
+
