--- a/sites/all/modules/scholar/theme/scholar-admin-links.css
+++ b/sites/all/modules/scholar/theme/scholar-admin-links.css
@@ -37,3 +37,41 @@
   text-decoration: underline;
   }
 
+.scholar-admin li.cite_distribute {
+  position: relative;
+  }
+
+.scholar-admin li.cite_distribute .distribute-form-wrapper {
+  position: absolute;
+  top: 12px;
+  left: 0;
+  background:#eef3fb;
+  border: 1px solid #dde2eb;
+  border-top: 0;
+  padding: 10px;
+  width: 400px;
+  }
+
+.scholar-admin li.cite_distribute .distribute-form-wrapper fieldset {
+  border: none;
+  background: transparent;
+  width: 100%;
+  }
+
+.scholar-admin li.cite_distribute .distribute-form-wrapper fieldset legend {
+  color: #888;
+  }
+
+.scholar-admin li.cite_distribute .repository-item {
+  display: inline;
+  margin-right: 15px;
+  }
+
+.scholar-admin li.cite_distribute .repository-item .form-item {
+  display:inline;
+  }
+
+#edit-cite-distribute-submit {
+  margin-left: 85px;
+  margin-bottom: 0;
+  }
