make the menu awesome

--- a/sites/all/themes/scholar_base/tabs.css
+++ b/sites/all/themes/scholar_base/tabs.css
@@ -65,7 +65,9 @@
   }
 
   ul.primary li.active a,
-  ul.primary li.active a:hover {
+  ul.primary li.active a:hover, 
+  ul.primary li.active-trail a, 
+  ul.primary li.active-trail a:hover {
     border-width: 0;
     color: #000;
     background-color: transparent;
@@ -73,7 +75,9 @@
   }
 
   ul.primary li.active a .tab,
-  ul.primary li.active a:hover .tab {
+  ul.primary li.active a:hover .tab,
+  ul.primary li.active-trail a .tab, 
+  ul.primary li.active-trail a:hover .tab {
     background: url(images/tab-right.png) no-repeat right 0;
   }
 
@@ -117,7 +121,9 @@
   }
 
   ul.secondary a.active,
-  ul.secondary a.active:hover {
+  ul.secondary a.active:hover, 
+  ul.secondary li.active-trail a, 
+  ul.secondary li.active-trail a:hover {
     border: 1px solid #c0c0c0;
     color: #000;
     background: url(images/tab-secondary.png) repeat-x left top;
