--- a/sites/all/themes/scholar_theme_01/scholar-theme-01.css
+++ b/sites/all/themes/scholar_theme_01/scholar-theme-01.css
@@ -140,7 +140,7 @@ body.navbar #header p {
   }
 
 
-#navbar a:hover, #sidebar-left a:hover, #navbar a.active, #sidebar-left a.active {
+#navbar a:hover, #sidebar-left a:hover, #navbar a.active, #sidebar-left a.active, #navbar li.active-trail, #sidebar-left li.active-trail {
   background:#F9FAFA;
   }
 
