buttons and throbbers

--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -175,6 +175,11 @@ div.ctools-modal-content #ucreate-user-form .form-item label {
 
 
 
+form div.buttons {
+  text-align: left;
+  margin-left: 200px;
+  }
+
 /* CONTENT PAGES FILTERING AND UPDATING OPTIONS */
 
 /* Removing formating for now 9/28/09
