user add popups etc

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -341,7 +341,7 @@ a.context-button:hover {
 
 /* OTHER BUTTONS */
 
-input.form-submit {
+input.form-submit, button {
   background: #b4c6ce;
   color: #000;
   border: 1px solid #a1aaae;
