--- a/sites/all/modules/vsite/cp/theme/cp-confirm-overide.css
+++ b/sites/all/modules/vsite/cp/theme/cp-confirm-overide.css
@@ -1,13 +1,86 @@
 /* Dialog
 ----------------------------------*/
-.ui-dialog { position: relative; padding: .2em; width: 300px; }
-.ui-dialog .ui-dialog-titlebar { padding: .5em .3em .3em 1em; position: relative;  }
-.ui-dialog .ui-dialog-title { float: left; margin: .1em 0 .2em; } 
-.ui-dialog .ui-dialog-titlebar-close { position: absolute; right: .3em; top: 50%; width: 19px; margin: -10px 0 0 0; padding: 1px; height: 18px; }
-.ui-dialog .ui-dialog-titlebar-close span { display: block; margin: 1px; }
-.ui-dialog .ui-dialog-titlebar-close:hover, .ui-dialog .ui-dialog-titlebar-close:focus { padding: 0; }
-.ui-dialog .ui-dialog-content { border: 0; padding: .5em 1em; background: none; overflow: auto; zoom: 1; }
-.ui-dialog .ui-dialog-buttonpane { text-align: left; border-width: 1px 0 0 0; background-image: none; margin: .5em 0 0 0; padding: .3em 1em .5em .4em; }
-.ui-dialog .ui-dialog-buttonpane button { float: right; margin: .5em .4em .5em 0; cursor: pointer; padding: .2em .6em .3em .6em; line-height: 1.4em; width:auto; overflow:visible; }
-.ui-dialog .ui-resizable-se { width: 14px; height: 14px; right: 3px; bottom: 3px; }
-.ui-draggable .ui-dialog-titlebar { cursor: move; }
+.ui-dialog {
+	position: relative;
+	background: url(images/popup-box.png) no-repeat 0 0 transparent;
+	}
+
+
+
+.ui-dialog .ui-dialog-titlebar, .ui-dialog .ui-dialog-content {
+	padding-top: 29px;
+	position: relative;
+	margin: 0 30px 0 45px;
+	width:88%;
+	}
+
+.ui-dialog .ui-dialog-title {
+	font-weight: bold;
+	font-size: 1.2em;
+	}
+
+.ui-dialog .ui-dialog-titlebar-close {
+	position: absolute;
+	right: .3em;
+	top: 50%;
+	width: 19px;
+	margin: -17px 0 0 0;
+	padding: 1px;
+	height: 18px;
+	}
+
+.ui-dialog .ui-dialog-titlebar-close span {
+	display: block;
+	margin-top: 20px;
+	}
+
+.ui-dialog .ui-dialog-titlebar-close:hover, .ui-dialog .ui-dialog-titlebar-close:focus {
+	padding: 0;
+	border:none !important;
+	}
+
+.ui-dialog .ui-dialog-content {
+	border: 0;
+	background: none;
+	overflow: auto;
+	zoom: 1;
+
+	}
+
+
+.ui-dialog .ui-dialog-buttonpane {
+	text-align: left;
+	left: 19px;
+	border-top: 1px solid #d8d9db;
+	padding: 7px 10px 28px 0;
+	width: 419px;
+	}
+
+.ui-dialog .ui-dialog-buttonpane button {
+	float: right;
+	margin: .5em .4em .5em 0;
+	cursor: pointer;
+	padding: .2em .6em .3em .6em;
+	line-height: 1.4em;
+	width:auto;
+	overflow:visible;
+	}
+
+.ui-dialog .ui-resizable-se {
+	width: 14px;
+	height: 14px;
+	right: 3px;
+	bottom: 3px;
+	}
+
+.ui-draggable .ui-dialog-titlebar {
+	cursor: none;
+	}
+
+.ui-dialog-overlay {
+  bottom: 0;
+  }
+
+.ui-dialog-titlebar-close {
+  display:none;
+  }
