changes for new body class cp-toolbar-full

--- a/sites/all/themes/scholar_theme_01/scholar-theme-01.css
+++ b/sites/all/themes/scholar_theme_01/scholar-theme-01.css
@@ -57,7 +57,7 @@ body.navbar-on #wrapper {
   background: url(images/body-bg-horiz.png) repeat-x 0 118px #fff;
   }
 
-body.cp-toolbar-on #wrapper {
+body.cp-toolbar-full #wrapper {
   background-position: 0 160px;
   }
 
