--- a/sites/all/themes/scholar_theme_07/scholar-theme-07.css
+++ b/sites/all/themes/scholar_theme_07/scholar-theme-07.css
@@ -4,7 +4,7 @@ body {
     font:.9em/165% "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
     }
 
-body.cp-toolbar-on {
+body.cp-toolbar-full {
   background-position: 50% 42px;
   }
 
