--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -148,9 +148,53 @@ div.terms {
 	position:relative;
 	}
 
+#top a, #top a:visited, #top ul.links li a, #top ul.links li a:visited {
+  font-family: arial, sans-serif !important;
+  }
 
+body.cp-toolbar-mini #top {
+  position: absolute;
+  background: #BBBABA;
+  height: auto;
+  right: 10px;
+  padding: 0;
+  line-height: normal;
+  -webkit-border-bottom-left-radius:5px;
+  -moz-border-radius-bottomleft: 5px;
+  -moz-border-radius-bottomright: 5px;
+  -webkit-border-bottom-right-radius:5px;
+  }
 
+body.cp-toolbar-mini #top ul.links li {
+  margin:0;
+  }
 
+body.cp-toolbar-mini #top ul.links li a, body.cp-toolbar-mini #top ul.links li a:visited {
+  color:#000000;
+  text-shadow:0 1px 0 rgba(206, 214, 221, 0.75);
+  font-size: 11px;
+  padding: 2px 3px;
+  border: 1px solid #d0d1d1;
+  border-top: none;
+  }
+
+body.cp-toolbar-mini #top ul.links li.first a {
+  padding-left: 6px;
+  border-right: none;
+
+  }
+
+body.cp-toolbar-mini #top ul.links li.last a {
+  padding-right: 6px;
+  border-left: none;
+  }
+
+body.cp-toolbar-mini #top ul.links li a:hover {
+  color: #fff;
+  text-decoration: none;
+  text-shadow:none;
+  background: #6B6B6B;
+  }
 
 
 
