fix to theme 01

--- a/sites/all/themes/scholar_theme_01/scholar-theme-01.css
+++ b/sites/all/themes/scholar_theme_01/scholar-theme-01.css
@@ -21,6 +21,10 @@ body.navbar-off {
     margin: 38px auto 0 auto;
     }
 
+body.navbar-on #container {
+  margin-top: 24px;
+  }
+
 a, a:visited {
     color:#306696;
     font-style: italic;
@@ -57,9 +61,10 @@ body.navbar-on #wrapper {
   background: url(images/body-bg-horiz.png) repeat-x 0 118px #fff;
   }
 
-body.cp-toolbar-full #wrapper {
+body.cp-toolbar-full #wrapper, body.cp-toolbar-mini #wrapper {
   background-position: 0 160px;
   }
+
 
 #sidebar-left, #header-left {
     width: 178px;
@@ -171,6 +176,13 @@ body.sidebar-left #content-wrapper, body.two-sidebars #content-wrapper {
 body.navbar #sidebar-left {
   clear: right;
   }
+
+
+
+
+
+
+
 
 /* side bar specific */
 
